# work_atoms_assement

./: .gitignore  README.md  fileprocessor.py  main.py  modified_main.py  pyproject.toml  requirements.txt  test.py  ui.py
client/: client.py  enhanced_client.py
input_files/: appointment_history_1.csv  copy.csv  copy_a_3.csv  t.csv
mcp-client/: .env  pyproject.toml
output_files/: b_dimensions.txt  copy.csv  dt.csv
server/: testing_server.py
temp_code/: code_0.py  code_1.py  code_5.py  code_6.py
